feat: Refactor AntialiasedLineSegment to draw within RenderingBoundaries